--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,9 +13,10 @@
         android:layout_height="wrap_content"
         android:text="Bonjour" />
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/MovieCardList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:orientation="horizontal" />
 
 </LinearLayout>
