--- a/app/src/main/res/layout/movie_card_item.xml
+++ b/app/src/main/res/layout/movie_card_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="200dp">
 
     <LinearLayout
@@ -18,25 +18,6 @@
             android:layout_width="120dp"
             android:layout_height="158dp"
             app:srcCompat="@drawable/ic_launcher_background" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/movieTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/default_title"
-                android:textSize="20dp" />
-
-            <TextView
-                android:id="@+id/movieGrade"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/default_grade" />
-        </LinearLayout>
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
