--- a/app/src/main/res/layout/movie_card_item.xml
+++ b/app/src/main/res/layout/movie_card_item.xml
@@ -7,6 +7,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@drawable/custom_button"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -15,8 +17,10 @@
 
         <ImageView
             android:id="@+id/moviePoster"
-            android:layout_width="120dp"
+            android:layout_width="wrap_content"
             android:layout_height="158dp"
+            android:background="@drawable/custom_button"
+            android:scaleType="centerCrop"
             app:srcCompat="@drawable/ic_launcher_background" />
 
     </LinearLayout>
