--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,79 +8,103 @@
     app:layout_scrollFlags="scroll"
     tools:context=".ui.home.HomeFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/popular_movie"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:layout_marginTop="0dp">
-
-        <ImageView
-            android:id="@+id/popular_poster"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_launcher_background"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        android:paddingBottom="80dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:background="@drawable/custom_linear_gradient_black"
-            android:gravity="center_horizontal|center_vertical"
-            android:orientation="vertical"
-            android:padding="30dp"
-            app:layout_constraintBottom_toBottomOf="parent">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/popular_movie"
+                android:layout_width="match_parent"
+                android:layout_height="500dp"
+                android:layout_marginTop="0dp">
+
+                <ImageView
+                    android:id="@+id/popular_poster"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/ic_launcher_background"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:background="@drawable/custom_linear_gradient_black"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:orientation="vertical"
+                    android:padding="30dp"
+                    app:layout_constraintBottom_toBottomOf="parent">
+
+                    <TextView
+                        android:id="@+id/popular_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="4dp"
+                        android:text="TextView"
+                        android:textAlignment="center"
+                        android:textColor="#FFFFFF"
+                        android:textSize="60sp"
+                        tools:layout_marginBottom="20dp" />
+
+                    <TextView
+                        android:id="@+id/popular_overview"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="TextView"
+                        android:textAlignment="center"
+                        android:textColor="#fff" />
+
+                    <Button
+                        android:id="@+id/popular_discover"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginBottom="16dp"
+                        android:backgroundTint="#F7D794"
+                        android:text="Découvrir"
+                        android:textColor="#000000" />
+                </LinearLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
-                android:id="@+id/popular_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:text="TextView"
-                android:textAlignment="center"
-                android:textColor="#FFFFFF"
-                android:textSize="60sp"
-                tools:layout_marginBottom="20dp" />
-
-            <TextView
-                android:id="@+id/popular_overview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="TextView"
-                android:textAlignment="center"
-                android:textColor="#fff" />
-
-            <Button
-                android:id="@+id/popular_discover"
+                android:id="@+id/last_movies"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:layout_marginBottom="16dp"
-                android:backgroundTint="#F7D794"
-                android:text="Découvrir"
-                android:textColor="#000000" />
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="20dp"
+                android:text="Dernière sorties"
+                android:textSize="20dp"
+                app:layout_constraintTop_toBottomOf="@+id/popular_movie" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/LastMoviesList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+            </androidx.recyclerview.widget.RecyclerView>
+
+            <TextView
+                android:id="@+id/best_rated"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Les mieux notés"
+                android:textSize="20dp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/BestMoviesList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
         </LinearLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dp"
-        android:text="Dernière sorties :"
-        android:textSize="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/popular_movie" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/MovieCardList"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-    </androidx.recyclerview.widget.RecyclerView>
+    </ScrollView>
 
 </LinearLayout>
