--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -26,8 +26,31 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="60dp"
                 android:ems="10"
+                android:hint="ex. Star Wars,..."
                 android:inputType="textPersonName"
-                android:text="Recherche..." />
+                android:textColorHint="#6E6E6E" />
+
+            <LinearLayout
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Date :" />
+
+                <EditText
+                    android:id="@+id/searchDate"
+                    android:layout_width="100dp"
+                    android:layout_height="48dp"
+                    android:ems="10"
+                    android:hint="2022"
+                    android:inputType="date"
+                    android:textSize="20dp" />
+            </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/SearchedMoviesList"
