--- a/app/src/main/res/layout/activity_movie_page.xml
+++ b/app/src/main/res/layout/activity_movie_page.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent">
 
     <ScrollView
+        android:id="@+id/scrollView3"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -18,12 +19,12 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/poster_group"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="500dp">
 
                 <ImageView
                     android:id="@+id/poster_image"
                     android:layout_width="match_parent"
-                    android:layout_height="300dp"
+                    android:layout_height="500dp"
                     android:scaleType="centerCrop"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +34,7 @@
                 <TextView
                     android:id="@+id/movie_title"
                     android:layout_width="match_parent"
-                    android:layout_height="300dp"
+                    android:layout_height="200dp"
                     android:background="@drawable/custom_linear_gradient_black"
                     android:elegantTextHeight="true"
                     android:gravity="center|center_vertical"
@@ -41,10 +42,18 @@
                     android:text="TextView"
                     android:textAlignment="center"
                     android:textColor="#fff"
-                    android:textSize="60sp"
+                    android:textSize="40sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/poster_image"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <ImageView
+                    android:id="@+id/imageView5"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@mipmap/ic_launcher_foreground" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -52,7 +61,8 @@
                 android:id="@+id/scrollView2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp">
+                android:layout_marginTop="20dp"
+                tools:ignore="SpeakableTextPresentCheck">
 
                 <LinearLayout
                     android:id="@+id/illustrations_layout"
@@ -102,14 +112,6 @@
                         android:layout_marginEnd="244dp"
                         android:text="Synopsis"
                         android:textSize="20sp" />
-
-                    <TextView
-                        android:id="@+id/duration"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginEnd="20dp"
-                        android:textColor="#000000" />
 
                     <TextView
                         android:id="@+id/overview"
@@ -162,6 +164,14 @@
 
 
                     <TextView
+                        android:id="@+id/releasedate"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="20dp"
+                        android:textColor="#000000" />
+
+                    <TextView
                         android:id="@+id/adult"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -170,7 +180,7 @@
                         android:textColor="#000000" />
 
                     <TextView
-                        android:id="@+id/releasedate"
+                        android:id="@+id/runtime"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
@@ -190,7 +200,7 @@
                         android:layout_marginStart="20dp"
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="244dp"
-                        android:text="A retrouver sur : "
+                        android:text="Diffusion : "
                         android:textSize="20sp" />
 
                     <TextView
