--- a/app/src/main/res/layout/activity_movie_page.xml
+++ b/app/src/main/res/layout/activity_movie_page.xml
@@ -55,6 +55,16 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@mipmap/ic_launcher_foreground" />
 
+                <ImageView
+                    android:id="@+id/returnArrow"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginEnd="16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/custom_arrow_back" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <ScrollView
